--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,91 @@
 #
 #    pip-compile requirements.in
 #
+altair==4.1.0             # via streamlit
+argon2-cffi==20.1.0       # via notebook
+astor==0.8.1              # via streamlit
+async-generator==1.10     # via nbclient
+attrs==20.3.0             # via jsonschema
+backcall==0.2.0           # via ipython
+base58==2.1.0             # via streamlit
+bleach==3.3.0             # via nbconvert
+blinker==1.4              # via streamlit
+cachetools==4.2.1         # via streamlit
+certifi==2020.12.5        # via requests
+cffi==1.14.5              # via argon2-cffi
+chardet==4.0.0            # via requests
+click==7.1.2              # via streamlit
 cycler==0.10.0            # via matplotlib
+decorator==4.4.2          # via ipython, validators
+defusedxml==0.7.1         # via nbconvert
+entrypoints==0.3          # via altair, nbconvert
 et-xmlfile==1.0.1         # via openpyxl
+gitdb==4.0.5              # via gitpython
+gitpython==3.1.14         # via streamlit
+idna==2.10                # via requests
+ipykernel==5.5.0          # via ipywidgets, notebook, pydeck
+ipython-genutils==0.2.0   # via nbformat, notebook, traitlets
+ipython==7.21.0           # via ipykernel, ipywidgets
+ipywidgets==7.6.3         # via pydeck
+jedi==0.18.0              # via ipython
+jinja2==2.11.3            # via altair, nbconvert, notebook, pydeck
+jsonschema==3.2.0         # via altair, nbformat
+jupyter-client==6.1.12    # via ipykernel, nbclient, notebook
+jupyter-core==4.7.1       # via jupyter-client, nbconvert, nbformat, notebook
+jupyterlab-pygments==0.1.2  # via nbconvert
+jupyterlab-widgets==1.0.0  # via ipywidgets
 kiwisolver==1.3.1         # via matplotlib
+markupsafe==1.1.1         # via jinja2
 matplotlib==3.3.4         # via seaborn
-numpy==1.20.1             # via matplotlib, pandas, scipy, seaborn
+mistune==0.8.4            # via nbconvert
+nbclient==0.5.3           # via nbconvert
+nbconvert==6.0.7          # via notebook
+nbformat==5.1.2           # via ipywidgets, nbclient, nbconvert, notebook
+nest-asyncio==1.5.1       # via nbclient
+notebook==6.2.0           # via widgetsnbextension
+numpy==1.20.1             # via altair, matplotlib, pandas, pyarrow, pydeck, scipy, seaborn, streamlit
 openpyxl==3.0.7           # via -r requirements.in
-pandas==1.2.3             # via -r requirements.in, seaborn
-pillow==8.1.2             # via matplotlib
-pyparsing==2.4.7          # via matplotlib
-python-dateutil==2.8.1    # via matplotlib, pandas
-pytz==2021.1              # via pandas
+packaging==20.9           # via bleach, streamlit
+pandas==1.2.3             # via -r requirements.in, altair, seaborn, streamlit
+pandocfilters==1.4.3      # via nbconvert
+parso==0.8.1              # via jedi
+pexpect==4.8.0            # via ipython
+pickleshare==0.7.5        # via ipython
+pillow==8.1.2             # via matplotlib, streamlit
+prometheus-client==0.9.0  # via notebook
+prompt-toolkit==3.0.17    # via ipython
+protobuf==3.15.6          # via streamlit
+ptyprocess==0.7.0         # via pexpect, terminado
+pyarrow==3.0.0            # via streamlit
+pycparser==2.20           # via cffi
+pydeck==0.6.1             # via streamlit
+pygments==2.8.1           # via ipython, jupyterlab-pygments, nbconvert
+pyparsing==2.4.7          # via matplotlib, packaging
+pyrsistent==0.17.3        # via jsonschema
+python-dateutil==2.8.1    # via jupyter-client, matplotlib, pandas, streamlit
+pytz==2021.1              # via pandas, tzlocal
+pyzmq==22.0.3             # via jupyter-client, notebook
+requests==2.25.1          # via streamlit
 scipy==1.6.1              # via seaborn
 seaborn==0.11.1           # via -r requirements.in
-six==1.15.0               # via python-dateutil
+send2trash==1.5.0         # via notebook
+six==1.15.0               # via argon2-cffi, bleach, cycler, jsonschema, protobuf, python-dateutil, validators
+smmap==3.0.5              # via gitdb
+streamlit==0.78.0         # via -r requirements.in
+terminado==0.9.2          # via notebook
+testpath==0.4.4           # via nbconvert
+toml==0.10.2              # via streamlit
+toolz==0.11.1             # via altair
+tornado==6.1              # via ipykernel, jupyter-client, notebook, streamlit, terminado
+traitlets==5.0.5          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbclient, nbconvert, nbformat, notebook, pydeck
+tzlocal==2.1              # via streamlit
+urllib3==1.26.3           # via requests
+validators==0.18.2        # via streamlit
+watchdog==2.0.2           # via streamlit
+wcwidth==0.2.5            # via prompt-toolkit
+webencodings==0.5.1       # via bleach
+widgetsnbextension==3.5.1  # via ipywidgets
 xlrd==2.0.1               # via -r requirements.in
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
